<resources>
    <!--
   * Grocery App
   * https://github.com/quintuslabs/GroceryStore
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
    <string name="app_name">Grocery Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="action_Cart">Cart</string>
    <string name="registered_mobile_number">Please Enter Register Mobile Number</string>
    <string name="reset_code">Reset Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend_code">Resend Code</string>
    <string name="order_item_details">My Order Details</string>
    <string name="an_otp_code_sent_to_your_phone">An OTP is sent to your phone number, enter here.</string>
    <string name="enter_otp_code">Enter OTP</string>
    <string name="save">Save</string>
    <string name="ResendOTP">Resend OTP</string>
    <string name="registered_successfull">Registered Successful</string>
    <string name="login_successfull">Login Successful</string>
    <string name="please_try_after_sometime">Please try after sometime</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_valid_otp">Enter Valid Otp</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="address">Address</string>
    <string name="otp"><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
    <string name="otp1"><![CDATA[<font color="#a3a3a3">Enter OTP sent to </font> <font color="#000000"></font>]]></string>

    <string name="please_select_country">Please select Country</string>
    <string name="please_select_zip">Please select Zip</string>
    <string name="please_select_state">Please select State</string>
    <string name="please_select_city">Please select City</string>
    <string name="please_select_address_type">Please select Address Type</string>
    <string name="name">Name : </string>
    <string name="end_date">End Date :</string>
    <string name="status">Status :</string>
    <string name="code">Code :</string>
    <string name="discount_price">Discount Price :</string>
    <string name="minimum_order_price">Minimum Order Price :</string>
    <string name="order_no">Order No :</string>
    <string name="total_price">Total Price :</string>
    <string name="delivery_date">Delivery Date :</string>
    <string name="order_date">Order Date:</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
</resources>
