<?xml version="1.0" encoding="utf-8"?><!--
   * Grocery App
   * https://github.com/quintuslabs/GroceryStore
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <com.quintus.labs.grocerystore.customfonts.MyTextViewMeriendaRegular
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:textColor="@color/text_color"
        android:textSize="17sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/registered_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/yellow"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/yellow" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.quintus.labs.grocerystore.customfonts.MyTextViewMeriendaRegular
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_left_arrow"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.quintus.labs.grocerystore.customfonts.MyTextViewMeriendaRegular
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>