<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpVarificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/an_otp_code_sent_to_your_phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">


                <EditText
                    android:id="@+id/otp_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_otp"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/colorPrimary" />


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/loginbutton_selector"
                android:elevation="5dp"
                android:onClick="onVerifyMobileOtpClicked"
                android:padding="15dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:onClick="onResendOTPClicked"
                android:padding="10dp"
                android:text="@string/ResendOTP"
                android:textSize="18dp" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>