<?xml version="1.0" encoding="utf-8"?><!--
   * Grocery App
   * https://github.com/quintuslabs/GroceryStore
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--            <ImageView-->
            <!--                android:id="@+id/offer_image"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:adjustViewBounds="true"-->
            <!--                android:scaleType="fitXY" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.quintus.labs.grocerystore.customfonts.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.3"
                        android:text="@string/name"
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <com.quintus.labs.grocerystore.customfonts.TextViewSemiBold
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.7"
                        android:text=""
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.quintus.labs.grocerystore.customfonts.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.3"
                        android:text="@string/end_date"
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <com.quintus.labs.grocerystore.customfonts.TextViewSemiBold
                        android:id="@+id/end_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.7"
                        android:text=""
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.quintus.labs.grocerystore.customfonts.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.3"
                        android:text="@string/status"
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <com.quintus.labs.grocerystore.customfonts.TextViewSemiBold
                        android:id="@+id/status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.7"
                        android:text=""
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.quintus.labs.grocerystore.customfonts.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.3"
                        android:text="@string/code"
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <com.quintus.labs.grocerystore.customfonts.TextViewSemiBold
                        android:id="@+id/code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:id="@+id/copy"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:layout_gravity="start"
                        android:src="@drawable/ic_baseline_content_copy_24"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.quintus.labs.grocerystore.customfonts.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.3"
                        android:text="@string/discount_price"
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <com.quintus.labs.grocerystore.customfonts.TextViewSemiBold
                        android:id="@+id/discount_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.7"
                        android:text=""
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.quintus.labs.grocerystore.customfonts.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.5"
                        android:text="@string/minimum_order_price"
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>

                    <com.quintus.labs.grocerystore.customfonts.TextViewSemiBold
                        android:id="@+id/minimum_ordre_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textSize="@dimen/margin_16"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
